<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/session_detail"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="16dp"
    tools:context="me.champeau.gr8confagenda.app.SessionDetailFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <ImageView
                android:id="@+id/session_detail_image"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:background="@android:color/holo_blue_dark"
                android:clickable="false"
                android:contentDescription="@string/profile_image"
                android:maxHeight="120dp"
                android:maxWidth="120dp"
                android:minHeight="120dp"
                android:minWidth="120dp" />

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="4dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/session_detail_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/session_title"
                    android:textAppearance="?android:attr/textAppearanceSearchResultTitle" />

                <TextView
                    android:id="@+id/session_detail_speaker"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/speaker"
                    android:textAppearance="?android:attr/textAppearanceMedium" />

                <TextView
                    android:id="@+id/session_detail_track"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="#64FFFF"
                    android:padding="2dp"
                    android:text="@string/track"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/session_detail_slot"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/slot"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

                <TextView
                    android:id="@+id/session_detail_twitter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/twitter"
                    android:textAppearance="?android:attr/textAppearanceSmall" />

            </LinearLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/textViewTitleAbstract"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/session_abstract"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/session_detail_body"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_text"
                android:textIsSelectable="true" />

            <TextView
                android:id="@+id/textViewTitleAboutSpeaker"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:text="@string/speaker_about"
                android:textAppearance="?android:attr/textAppearanceMedium"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/session_detail_speaker_detail"
                style="?android:attr/textAppearanceMedium"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/speaker_detail"
                android:textIsSelectable="true" />


        </LinearLayout>

    </LinearLayout>
</ScrollView>

