<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal"
    android:background="?android:attr/activatedBackgroundIndicator">

    <TextView
        android:id="@+id/session_list_time"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        tools:text="08:00-09:00"
        android:textSize="15sp"
        android:layout_marginEnd="4dp"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <ImageView
                android:layout_width="16dp"
                android:layout_height="16dp"
                android:id="@+id/starred_session"
                android:contentDescription="@string/star_image_alt"
                android:src="@android:drawable/btn_star_big_on"
                android:layout_gravity="center_vertical"/>

            <TextView
                android:id="@+id/session_list_title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/session_title"
                android:textSize="15sp"
                android:textStyle="bold"/>
            </LinearLayout>

        <TextView
            android:id="@+id/session_list_track"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="#77FF77"
            android:padding="1dp"
            android:text="@string/track"
            android:textSize="12sp" />
    </LinearLayout>
</LinearLayout>
